--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
           set +e  # Allow script to continue even if tests fail
           npx playwright test --reporter=html
           echo "TEST_RESULT=$?" >> $GITHUB_ENV  # Store the exit code (0=pass, non-zero=fail)
+        continue-on-error: true  # Continue even if tests fail
 
       # Step 7: Stop the server
       - name: Stop the server
@@ -55,8 +56,16 @@ jobs:
           name: playwright-report
           path: playwright-report
 
+      # Step 9: Upload test results as an artifact
+      - name: Upload Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: test-results
+
   build:
-    
+    runs-on: ubuntu-latest
     needs: test  # This ensures the build job waits for the test job to complete
 
     if: success()  # This ensures the build job only runs if the test job was successful
@@ -66,44 +75,58 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # Step 2: Setup JFrog CLI for communication with JFrog Artifactory
+      # Step 2: Download test results
+      - name: Download Test Results
+        uses: actions/download-artifact@v2
+        with:
+          name: test-results
+
+      # Step 3: Check for "failed" in the test results
+      - name: Check Test Results
+        run: |
+          if grep -q '"status": "failed"' test-results/.last-run.json; then
+            echo "Playwright tests failed, stopping the build."
+            exit 1  # Exit with an error code to stop the build job
+          fi
+
+      # Step 4: Setup JFrog CLI for communication with JFrog Artifactory
       - name: Setup JFrog CLI
         uses: jfrog/setup-jfrog-cli@v3
         env:
           JF_URL: ${{ secrets.JF_URL }}
           JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
 
-      # Step 3: Configure JFrog for npm repositories
+      # Step 5: Configure JFrog for npm repositories
       - name: Set CLI Config
         run: jf npm-config --global=true --repo-resolve=cgdemo-virtual --repo-deploy=cgdemo-virtual
 
-      # Step 4: Install project dependencies using npm and JFrog CLI
+      # Step 6: Install project dependencies using npm and JFrog CLI
       - name: Install Deps using JFrog CLI
         run: jf npm install
 
-      # Step 5: Build the project
+      # Step 7: Build the project
       - name: Build Project
         run: npm run build
 
-      # Step 6: Get current timestamp to use in file names
+      # Step 8: Get current timestamp to use in file names
       - name: Get Current Timestamp
         id: vars
         run: echo "TIMESTAMP=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
 
-      # Step 7: Archive the build directory into a .tgz file with a timestamp
+      # Step 9: Archive the build directory into a .tgz file with a timestamp
       - name: Archive Artifacts into TGZ with Timestamp
         run: tar -czf build_${{ env.TIMESTAMP }}.tgz build/
 
-      # Step 8: Push the compressed .tgz file to JFrog Artifactory
+      # Step 10: Push the compressed .tgz file to JFrog Artifactory
       - name: Push Artifacts to JFrog
         run: |
           jf rt u "build_${{ env.TIMESTAMP }}.tgz" "cgdemo-virtual/cg-artifacts/build_${{ env.TIMESTAMP }}.tgz"
 
-      # Step 9: Publish the npm package to JFrog Artifactory
+      # Step 11: Publish the npm package to JFrog Artifactory
       - name: Publish npm package
         run: jf npm publish
 
-      # Step 10: Publish build information to JFrog
+      # Step 12: Publish build information to JFrog
       - name: Publish Build info With JFrog CLI
         run: |
           jf rt build-collect-env
